--- a/config.toml
+++ b/config.toml
@@ -73,12 +73,14 @@ enableGitInfo = false
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "Avatar.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
- # email = "abir.ismaili-alaoui@loria.fr"
-  #address = "Building 1 Room 1, Stanford University, California, 90210, USA"
-  #office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  #phone = "888 888 88 88"
- #skype = "echo123"
-  #telegram = ""
+  email = "abir.ismaili-alaoui@loria.fr"
+  address = ""
+  office_hours = ""
+  phone = ""
+  skype = ""
+  telegram = ""
+  twitter = "Abi_R_"
+  github = "Abir-IA"
 
   # Enable Keybase in Contact widget by entering your keybase.io username.
   keybase = ""
