--- a/config.toml
+++ b/config.toml
@@ -285,7 +285,7 @@ enableGitInfo = false
 
 [[menu.main]]
   name = "Publications"
-  url = "#publications_selected"
+  url = "#Publications"
   weight = 3
 
 [[menu.main]]
@@ -300,12 +300,12 @@ enableGitInfo = false
 
 [[menu.main]]
   name = "Teaching"
-  url = "#teaching"
+  url = "#Teaching"
   weight = 6
 
 [[menu.main]]
   name = "Contact"
-  url = "#contact"
+  url = "#Contact"
   weight = 7
 
 # Link to a PDF of your resume/CV from the menu.
