--- a/config.toml
+++ b/config.toml
@@ -65,7 +65,7 @@ enableGitInfo = false
 
   # Your details.
   name = "Abir Ismaili-Alaoui"
-  role = "PhD Candidate in Computer science"
+  role = "PhD Candidate in Computer science & Lifelong learner."
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
