--- a/config.toml
+++ b/config.toml
@@ -289,7 +289,7 @@ enableGitInfo = false
   weight = 3
 
 [[menu.main]]
-  name = "Talks & Workshops "
+  name = "Talks"
   url = "#talks"
   weight = 4
 
