--- a/config.toml
+++ b/config.toml
@@ -241,7 +241,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "twitter"
     icon_pack = "fa"
-    link = "//twitter.com/Abi_R_"
+    link = "//twitter.com/AbirAlaouii"
     
     [[params.social]]
     icon = "linkedin"
