--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@
 baseurl = "https://abirismailialaoui.netlify.com/"
 
 # Title of your site
-title = "Abir Ismaili-Alaoui"
+title = "Abir Alaoui-Ismaili"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
@@ -64,12 +64,12 @@ enableGitInfo = false
   font = "default"
 
   # Your details.
-  name = "Abir Ismaili-Alaoui"
-  role = "PhD student in Computer science & Lifelong learner."
+  name = "Abir Alaoui-Ismaili"
+  role = "PhD in Computer science & Lifelong learner."
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Lorraine University", url = "" } ]
+  organizations = [ { name = "Lorraine University & Mohammed V University", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "Avatar.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
